fix: layout when sidebar are collapsed

--- a/src/layout/AppLayout/AppLayout.css
+++ b/src/layout/AppLayout/AppLayout.css
@@ -3,8 +3,7 @@
 }
 
 .page-content {
-  display: flex;
-  flex-direction: column;
-  flex: 1 1 0;
   height: 100vh;
+  width: calc(100% - var(--side-bar-width));
+  overflow: hidden;
 }
